[gd_scene load_steps=3 format=3 uid="uid://b5fyhefvmho62"]

[ext_resource type="Script" path="res://src/puzzle/Code.gd" id="1_vpsi5"]
[ext_resource type="Texture2D" uid="uid://cfb5rmdvl0yvd" path="res://assets/code/code.jpg" id="2_maf2t"]

[node name="Code" type="Node2D"]
script = ExtResource("1_vpsi5")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(452, 454.06)
scale = Vector2(0.884, 0.888789)
texture = ExtResource("2_maf2t")

[node name="Button1" type="Button" parent="Sprite2D"]
offset_left = -260.0
offset_top = -164.0
offset_right = -114.0
offset_bottom = -41.0
flat = true

[node name="Button2" type="Button" parent="Sprite2D"]
offset_left = -95.0
offset_top = -165.0
offset_right = 57.0
offset_bottom = -41.0
flat = true

[node name="Button3" type="Button" parent="Sprite2D"]
offset_left = 80.0
offset_top = -164.0
offset_right = 230.0
offset_bottom = -41.0
flat = true

[node name="Button4" type="Button" parent="Sprite2D"]
offset_left = -258.234
offset_top = -28.3569
offset_right = -116.234
offset_bottom = 95.6431
flat = true

[node name="Button5" type="Button" parent="Sprite2D"]
offset_left = -93.0
offset_top = -25.0
offset_right = 56.0
offset_bottom = 96.0
flat = true

[node name="Button6" type="Button" parent="Sprite2D"]
offset_left = 78.0
offset_top = -27.0
offset_right = 229.0
offset_bottom = 97.0
flat = true

[node name="Button7" type="Button" parent="Sprite2D"]
offset_left = -260.0
offset_top = 109.0
offset_right = -113.0
offset_bottom = 243.0
flat = true

[node name="Button8" type="Button" parent="Sprite2D"]
offset_left = -95.0
offset_top = 110.0
offset_right = 57.0
offset_bottom = 244.0
flat = true

[node name="Button9" type="Button" parent="Sprite2D"]
offset_left = 78.0
offset_top = 107.0
offset_right = 229.0
offset_bottom = 242.0
flat = true

[node name="ButtonEnter" type="Button" parent="Sprite2D"]
offset_left = 79.0
offset_top = 257.0
offset_right = 228.0
offset_bottom = 404.0
flat = true

[node name="CodeInput" type="TextEdit" parent="Sprite2D"]
offset_left = -214.0
offset_top = -373.0
offset_right = 197.0
offset_bottom = -267.0
theme_override_font_sizes/font_size = 60
context_menu_enabled = false
shortcut_keys_enabled = false
selecting_enabled = false
deselect_on_focus_loss_enabled = false
drag_and_drop_selection_enabled = false
virtual_keyboard_enabled = false
middle_mouse_paste_enabled = false

[connection signal="pressed" from="Sprite2D/Button1" to="." method="_on_button_1_pressed"]
[connection signal="pressed" from="Sprite2D/Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="Sprite2D/Button3" to="." method="_on_button_3_pressed"]
[connection signal="pressed" from="Sprite2D/Button4" to="." method="_on_button_4_pressed"]
[connection signal="pressed" from="Sprite2D/Button5" to="." method="_on_button_5_pressed"]
[connection signal="pressed" from="Sprite2D/Button6" to="." method="_on_button_6_pressed"]
[connection signal="pressed" from="Sprite2D/Button7" to="." method="_on_button_7_pressed"]
[connection signal="pressed" from="Sprite2D/Button8" to="." method="_on_button_8_pressed"]
[connection signal="pressed" from="Sprite2D/Button9" to="." method="_on_button_9_pressed"]
[connection signal="pressed" from="Sprite2D/ButtonEnter" to="." method="_on_button_enter_pressed"]
[connection signal="text_set" from="Sprite2D/CodeInput" to="." method="_on_code_input_text_set"]
